--- a/templates/ingredientes/editar.html.twig
+++ b/templates/ingredientes/editar.html.twig
@@ -3,20 +3,28 @@
 {% block title %}Editar Ingrediente{% endblock %}
 
 {% block body %}
-<div class="container mt-4">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <h1 class="mb-4">Editar Ingrediente</h1>
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    {{ form_start(form) }}
-                        {{ form_row(form.nombre) }}
-                        {# Si tienes más campos, añádelos aquí #}
-                        <button class="btn btn-success mt-3">Guardar cambios</button>
-                    {{ form_end(form) }}
-                    <a href="{{ path('gestion_ingredientes') }}" class="btn btn-secondary mt-3">Volver al listado</a>
-                </div>
-            </div>
+<div class="position-fixed top-0 start-0 w-100 h-100 min-vh-100 min-vw-100"
+     style="z-index: -1; background-image: url('{{ asset('assets/FondoPantallaAdministrador.jpg') }}'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+</div>
+<div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+    <div class="container bg-white bg-opacity-90 rounded-xl shadow-lg py-4 position-relative d-flex justify-content-center align-items-center"
+         style="z-index: 1; max-width: 500px; min-width: 500px; min-height: 500px; height: 500px;">
+        <div style="width:100%;">
+           <h1 class="mb-4">Editar Ingrediente</h1>
+           <div class="row justify-content-center">
+              <div class="col-md-12">
+                 <div class="card shadow-sm">
+                    <div class="card-body">
+                        {{ form_start(form) }}
+                           {{ form_row(form.nombre) }}
+                           {# Si tienes más campos, añádelos aquí #}
+                           <button class="btn btn-success mt-3">Guardar cambios</button>
+                        {{ form_end(form) }}
+                        <a href="{{ path('gestion_ingredientes') }}" class="btn btn-secondary mt-3">Volver al listado</a>
+                    </div>
+                 </div>
+              </div>
+           </div>
         </div>
     </div>
 </div>
