--- a/templates/ingredientes/nuevo.html.twig
+++ b/templates/ingredientes/nuevo.html.twig
@@ -3,19 +3,26 @@
 {% block title %}Nuevo Ingrediente{% endblock %}
 
 {% block body %}
-<div class="container mt-4">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <h1 class="mb-4">Crear nuevo ingrediente</h1>
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    {{ form_start(form) }}
-                        {{ form_row(form.nombre) }}
-                        
-                        <button class="btn btn-success mt-3">Guardar</button>
-                    {{ form_end(form) }}
-                    <a href="{{ path('gestion_ingredientes') }}" class="btn btn-secondary mt-3">Volver al listado</a>
-                </div>
+<div class="position-fixed top-0 start-0 w-100 h-100 min-vh-100 min-vw-100"
+     style="z-index: -1; background-image: url('{{ asset('assets/FondoPantallaAdministrador.jpg') }}'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+</div>
+<div class="container mt-4 d-flex justify-content-center align-items-center" style="min-height: 90vh;">
+    <div class="bg-white bg-opacity-90 rounded-xl shadow-lg py-4 px-4 position-relative" style="z-index: 1; max-width: 500px; min-width: 350px; width: 100%;">
+        <h1 class="mb-4 text-center">Crear nuevo ingrediente</h1>
+        <div class="card shadow-sm">
+            <div class="card-body">
+                {% for label, messages in app.flashes %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{ label }} mt-3">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+                {{ form_start(form) }}
+                    {{ form_row(form.nombre) }}
+                    <button class="btn btn-success mt-3">Guardar</button>
+                {{ form_end(form) }}
+                <a href="{{ path('gestion_ingredientes') }}" class="btn btn-secondary mt-3">Volver al listado</a>
             </div>
         </div>
     </div>
