--- a/templates/recetas/index.html.twig
+++ b/templates/recetas/index.html.twig
@@ -2,8 +2,11 @@
 
 {% block title %}Listado de Recetas{% endblock %}
 
+
+
 {% block body %}
-<div class="container mt-4">
+<div class="position-fixed top-0 start-0 w-100 h-100 min-vh-100 min-vw-100" style="z-index: -1; background-image: url('{{ asset('assets/FondoPantallaAdministrador.jpg') }}'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;"></div>
+  <div class="container bg-white bg-opacity-90 rounded-xl shadow-lg py-4 position-relative" style="z-index: 1;">
     <h1 class="mb-4">Listado de Recetas</h1>
     <div class="mb-3 d-flex justify-content-between">
         <a href="{{ path('administrador') }}" class="btn btn-secondary">Volver al panel de administración</a>
