--- a/templates/recetas/ver.html.twig
+++ b/templates/recetas/ver.html.twig
@@ -3,9 +3,12 @@
 {% block title %}Detalle de la Receta{% endblock %}
 
 {% block body %}
-<div class="container mt-5">
+<div class="position-fixed top-0 start-0 w-100 h-100 min-vh-100 min-vw-100"
+     style="z-index: -1; background-image: url('{{ asset('assets/FondoPantallaAdministrador.jpg') }}'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+</div>
+<div class="container bg-white bg-opacity-90 rounded-xl shadow-lg py-4 position-relative" style="z-index: 1; max-width: 500px;">
     <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-12">
             <div class="card shadow-sm">
                 <div class="card-header bg-info text-white">
                     <h3 class="mb-0">Detalle de la Receta</h3>
@@ -14,7 +17,6 @@
                     {% if receta.imagen %}
                         <img src="{{ asset('assets/fotorecetas/' ~ receta.imagen) }}" alt="Imagen de la receta" class="img-fluid mb-3">
                     {% else %}
-                        <!-- No hay imagen para esta receta -->
                         <div class="alert alert-warning mt-2">No hay imagen para esta receta.</div>
                     {% endif %}
                     <ul class="list-group list-group-flush mb-3">
