--- a/templates/usuarios/editar.html.twig
+++ b/templates/usuarios/editar.html.twig
@@ -3,9 +3,12 @@
 {% block title %}Editar Usuario{% endblock %}
 
 {% block body %}
-<div class="container mt-4">
+<div class="position-fixed top-0 start-0 w-100 h-100 min-vh-100 min-vw-100"
+     style="z-index: -1; background-image: url('{{ asset('assets/FondoPantallaAdministrador.jpg') }}'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+</div>
+<div class="container bg-white bg-opacity-90 rounded-xl shadow-lg py-4 position-relative" style="z-index: 1; max-width: 600px;">
     <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <h1 class="mb-4">Editar Usuario</h1>
             <div class="card shadow-sm">
                 <div class="card-body">
