--- a/templates/usuarios/index.html.twig
+++ b/templates/usuarios/index.html.twig
@@ -1,9 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UsuariosController!{% endblock %}
+{% block title %}Listado de Usuarios{% endblock %}
 
 {% block body %}
-<div class="container mt-4">
+<div class="position-fixed top-0 start-0 w-100 h-100 min-vh-100 min-vw-100"
+     style="z-index: -1; background-image: url('{{ asset('assets/FondoPantallaAdministrador.jpg') }}'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+</div>
+<div class="container bg-white bg-opacity-90 rounded-xl shadow-lg py-4 position-relative" style="z-index: 1;">
     <h1 class="mb-4">Listado de Usuarios</h1>
     <div class="mb-3 d-flex justify-content-between">
         <a href="{{ path('administrador') }}" class="btn btn-secondary">Volver al panel de administración</a>
@@ -44,5 +47,12 @@
             </tbody>
         </table>
     </div>
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }} mt-3">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
 </div>
 {% endblock %}
