--- a/templates/usuarios/nuevo.html.twig
+++ b/templates/usuarios/nuevo.html.twig
@@ -3,21 +3,22 @@
 {% block title %}Nuevo Usuario{% endblock %}
 
 {% block body %}
-<div class="container mt-4">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <h1 class="mb-4">Crear nuevo usuario</h1>
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    {{ form_start(form) }}
-                        {{ form_row(form.nombre) }}
-                        {{ form_row(form.email) }}
-                        {{ form_row(form.password) }}
-                        {{ form_row(form.rol) }}
-                        <button class="btn btn-success mt-3">Guardar</button>
-                    {{ form_end(form) }}
-                    <a href="{{ path('gestion_usuarios') }}" class="btn btn-secondary mt-3">Volver al listado</a>
-                </div>
+<div class="position-fixed top-0 start-0 w-100 h-100 min-vh-100 min-vw-100"
+     style="z-index: -1; background-image: url('{{ asset('assets/FondoPantallaAdministrador.jpg') }}'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+</div>
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+    <div class="bg-white bg-opacity-90 rounded-xl shadow-lg py-4 px-4 position-relative" style="z-index: 1; max-width: 500px; min-width: 350px; width: 100%;">
+        <h1 class="mb-4 text-center">Crear nuevo usuario</h1>
+        <div class="card shadow-sm">
+            <div class="card-body">
+                {{ form_start(form) }}
+                    {{ form_row(form.nombre) }}
+                    {{ form_row(form.email) }}
+                    {{ form_row(form.password) }}
+                    {{ form_row(form.rol) }}
+                    <button class="btn btn-success mt-3">Guardar</button>
+                {{ form_end(form) }}
+                <a href="{{ path('gestion_usuarios') }}" class="btn btn-secondary mt-3">Volver al listado</a>
             </div>
         </div>
     </div>
