--- a/templates/tiposrecetas/tiposrecetas.html.twig
+++ b/templates/tiposrecetas/tiposrecetas.html.twig
@@ -13,10 +13,11 @@
             <a href="/home" class="text-lg font-semibold text-gray-700">ReciTech</a>
         </div>
         <!-- Menú -->
+        
         <nav class="flex items-center space-x-6 text-xs">
+        
             <a href="/home" class="flex flex-col items-center">
             <img src="{{ asset('assets/iconos/casa.png') }}" alt="" class="w-8 h-8">
-            
             </a>
             <a href="/minevera" class="flex flex-col items-center">
             <img src="{{ asset('assets/iconos/nevera.png') }}" alt="Mi Nevera" class="w-8 h-8">
@@ -31,18 +32,18 @@
     <!-- Contenido principal -->
     <div class="container mx-auto p-6">
         <div class="flex justify-center space-x-6">
-            <!-- Tarjeta Experto -->
-            <div class="w-1/4 bg-gray-200 rounded-lg shadow-md p-6 text-center hover:border-2 hover:border-blue-500 cursor-pointer">
-                <h2 class="text-lg font-bold text-gray-700">Experto</h2>
-            </div>
-            <!-- Tarjeta Medio -->
-            <div class="w-1/4 bg-gray-200 rounded-lg shadow-md p-6 text-center hover:border-2 hover:border-blue-500 cursor-pointer">
-                <h2 class="text-lg font-bold text-gray-700">Medio</h2>
-            </div>
+            <!-- Tarjeta Difícil -->
+            <a href="{{ path('filtrar_recetas', {'dificultad': 'Difícil'}) }}" class="w-1/4 bg-gray-200 rounded-lg shadow-md p-6 text-center hover:border-2 hover:border-blue-500 cursor-pointer block">
+                <h2 class="text-lg font-bold text-gray-700">Difícil</h2>
+            </a>
+            <!-- Tarjeta Media -->
+            <a href="{{ path('filtrar_recetas', {'dificultad': 'Media'}) }}" class="w-1/4 bg-gray-200 rounded-lg shadow-md p-6 text-center hover:border-2 hover:border-blue-500 cursor-pointer block">
+                <h2 class="text-lg font-bold text-gray-700">Media</h2>
+            </a>
             <!-- Tarjeta Fácil -->
-            <div class="w-1/4 bg-gray-200 rounded-lg shadow-md p-6 text-center hover:border-2 hover:border-blue-500 cursor-pointer">
+            <a href="{{ path('filtrar_recetas', {'dificultad': 'Fácil'}) }}" class="w-1/4 bg-gray-200 rounded-lg shadow-md p-6 text-center hover:border-2 hover:border-blue-500 cursor-pointer block">
                 <h2 class="text-lg font-bold text-gray-700">Fácil</h2>
-            </div>
+            </a>
         </div>
     </div>
 {% endblock %}
