--- a/templates/minevera/mineverafiltrada.html.twig
+++ b/templates/minevera/mineverafiltrada.html.twig
@@ -11,6 +11,9 @@
             <h1 class="text-lg font-semibold text-gray-700">ReciTech</h1>
         </div>
         <nav class="flex items-center space-x-6 text-xs">
+            <a href="/home" class="flex flex-col items-center">
+            <img src="{{ asset('assets/iconos/casa.png') }}" alt="" class="w-8 h-8">
+            </a>
             <a href="/minevera" class="flex flex-col items-center">
                 <img src="{{ asset('assets/iconos/nevera.png') }}" alt="Mi Nevera" class="w-8 h-8">
             </a>
